--- a/fs4csdev/可能的大纲.md
+++ b/fs4csdev/可能的大纲.md
@@ -8,10 +8,12 @@
     -  单位
     - Seq [1..100]
 
-3. 函数
-    - 递归
+3. 函数    
+    - 递归、闭包、高阶函数、副作用
     - 管道符： |>  >>
-    - 柯里化
+    - 函数签名、柯里化
+    - 高阶函数、部分函数
+    - 
     
 
 4. 模块
