--- a/fs4csdev/可能的大纲.md
+++ b/fs4csdev/可能的大纲.md
@@ -13,7 +13,6 @@
     - 管道符： |>  >>
     - 函数签名、柯里化
     - 高阶函数、部分函数
-    - 
     
 
 4. 模块
@@ -21,7 +20,7 @@
     - 命名空间及与模块区别、程序入口
     - 扩展方法、扩展模块（可能需在OOP后介绍）
 
-4. 函数式编程、Lazy（Seq）、偏函数、记忆函数、尾递归。（先FP不是先OP？）
+4. 函数式编程、Lazy（Seq）、偏函数、记忆函数、尾递归。（先FP还是先OP？）
 
 4. OOP
     - 对象级扩展方法(F#程序设计P174)    
