--- a/fs4csdev/可能的大纲.md
+++ b/fs4csdev/可能的大纲.md
@@ -4,8 +4,8 @@
 
 3. F#其他类型
     - 常量
-    - （tuple list union record等）
-    -  单位
+    - （tuple list 等）
+    -  array
     - Seq [1..100]
 
 3. 函数    
@@ -13,14 +13,18 @@
     - 管道符： |>  >>
     - 函数签名、柯里化
     - 高阶函数、部分函数
-    
+    - 单位
+    - union record option
 
 4. 模块
     - 常用模块函数（Seq查询表达式介绍即Linq）
     - 命名空间及与模块区别、程序入口
     - 扩展方法、扩展模块（可能需在OOP后介绍）
 
-4. 函数式编程、Lazy（Seq）、偏函数、记忆函数、尾递归。（先FP还是先OP？）
+4. 函数式编程、Lazy（Seq）、偏函数、记忆函数、尾递归、模式匹配。（先FP还是先OP？）
+
+5. F# 其它相关
+    
 
 4. OOP
     - 对象级扩展方法(F#程序设计P174)    
