--- a/fs4csdev/可能的大纲.md
+++ b/fs4csdev/可能的大纲.md
@@ -5,35 +5,38 @@
 3. F#其他类型
     - 常量
     - （tuple list 等）
-    -  array
+    - array
     - Seq [1..100]
 
-3. 函数    
-    - 递归、闭包、高阶函数、副作用
+1. 函数  
+    - 递归、高阶函数、副作用
     - 管道符： |>  >>
-    - 函数签名、柯里化
-    - 高阶函数、部分函数
-    - 单位
-    - union record option
-
-4. 模块
+    - 函数签名、
+    - 高阶函数、部分函数    
     - 常用模块函数（Seq查询表达式介绍即Linq）
+
+2. 模块
     - 命名空间及与模块区别、程序入口
+    - 自动打开和强制显示访问
     - 扩展方法、扩展模块（可能需在OOP后介绍）
+    - 单位
+    - 与C#互操作
 
-4. 函数式编程、Lazy（Seq）、偏函数、记忆函数、尾递归、模式匹配。（先FP还是先OP？）
+1. 函数式编程、Lazy（Seq）、记忆函数、尾递归、模式匹配。（先FP还是先OP？）
 
-5. F# 其它相关
-    
+   - 闭包
+   - union record option
 
-4. OOP
+2. F# 其它相关
+
+3. OOP
     - 对象级扩展方法(F#程序设计P174)    
     - 结构 
 
-5. 以函数实现的设计模式
+1. 以函数实现的设计模式
 
-5. 异步与并发
+2. 异步与并发
 
-6. 与C# 互操作
+3. 与C# 互操作
 
-8. *计算表达式、类型提供器、代码引用*
+4. *计算表达式、类型提供器、代码引用*
