--- a/fs4csdev/可能的大纲.md
+++ b/fs4csdev/可能的大纲.md
@@ -23,13 +23,15 @@
    - 与C#互操作
 
 6. 函数式编程、Lazy（Seq）、记忆函数、尾递归、模式匹配。（先FP还是先OP？）
-
-- 闭包
-- union record option
+    - 单位
+    - 闭包
+    - union record option
+    - printf ignore
 
 1. F# 其它相关
 
 2. OOP
+    - 哲学、数学、心理学
    - 对象级扩展方法(F#程序设计P174)    
    - 结构 
 
