--- a/fs4csdev/可能的大纲.md
+++ b/fs4csdev/可能的大纲.md
@@ -3,42 +3,56 @@
 2. 运算符 其他基本语法（流程控制 模式匹配）
 
 3. F#其他类型
-   - 常量
-   - （tuple list 等）
-   - array
-   - Seq [1..100]
+- 常量
+- （tuple list 等）
+- array
+- Seq [1..100]
 
-4. 函数  
+1. 函数  
    - 递归、高阶函数、副作用
    - 管道符： |>  >>
    - 函数签名、
    - 高阶函数、部分函数    
    - 常用模块函数（Seq查询表达式介绍即Linq）
 
-5. 模块
-   - 命名空间及与模块区别、程序入口、文件顺序
-   - 自动打开和强制显示访问
-   - 扩展方法、扩展模块（可能需在OOP后介绍）
-   - 单位
-   - 与C#互操作
+2. 模块
+- 命名空间及与模块区别、程序入口、文件顺序
+- 自动打开和强制显示访问
+- 扩展方法、扩展模块（可能需在OOP后介绍）
+- 单位
+- 与C#互操作
 
-6. 函数式编程、Lazy（Seq）、记忆函数、尾递归、模式匹配。（先FP还是先OP？）
+1. 函数式编程、Lazy（Seq）、记忆函数、尾递归、模式匹配。（先FP还是先OP？）
     - 单位
     - 闭包
     - union record option
     - printf ignore
 
-1. F# 其它相关
+2. F# 其它相关
 
-2. OOP
+3. OOP
     - 哲学、数学、心理学
-   - 对象级扩展方法(F#程序设计P174)    
-   - 结构 
+- 对象级扩展方法(F#程序设计P174)    
+- 结构 
 
-3. 以函数实现的设计模式
+1. 以函数实现的设计模式
+2. 异步与并发
+3. 与C# 互操作
+4. *计算表达式、*
+5. *类型提供程序*（http://apollo13cn.blogspot.jp/2013/11/why-f-type-provider.html）
+6. *、代码引用*
 
-4. 异步与并发
 
-5. 与C# 互操作
 
-6. *计算表达式、类型提供器、代码引用*
+
+其他：
+
+内联
+
+可变类型： https://msdn.microsoft.com/zh-cn/library/dd233198(v=vs.110).aspxv
+
+静态解析类型参数： https://msdn.microsoft.com/zh-cn/library/dd548046(v=vs.110).aspxv
+
+变长参数，可选参数
+
+array2d3d
