--- a/fs4csdev/目录.md
+++ b/fs4csdev/目录.md
@@ -1,8 +1,16 @@
+# 如果你也会C#，那不妨了解下F#：目录
 
 
-[F# 数据类型](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-1.html)
-[数值运算和流程控制语法](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-2.html)
-[F#集合类型和其他核心类型](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-3.html)
-[了解函数及常用函数](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-4.html)
-[模块及与C#互相调用](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-5.html)
-[面向对象编程之“类”](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-6.html)
+
+1. [F# 数据类型](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-1.html)  
+1. [数值运算和流程控制语法](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-2.html)  
+1. [F#集合类型和其他核心类型](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-3.html)  
+1. [了解函数及常用函数](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-4.html)  
+1. [模块及与C#互相调用](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-5.html)  
+1. [面向对象编程之“类”](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-6.html)  
+1. [面向对象编程之继承、接口和泛型](http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-7.html)  
+
+
+---
+
+*本文发表于[博客园](http://www.cnblogs.com/hjklin)。 转载请注明源链接：<http://www.cnblogs.com/hjklin/p/fs-for-cs-dev-toc.html>。*
